feat: login & register with jwt
