# src/api/components/user/user.service.ts
@@ -1,20 +1,21 @@
 import prisma from '@services/prisma';
-import { AlreadyExistsException, NotFoundException } from '../../../types/response.type';
-import { UserCreationParams, UserResponse, UserResponseWithRecords, UserUpdateParams } from './user.types';
+import { AlreadyExistsException, NotFoundException } from '@appTypes/response.type';
+import { SignUpParams } from '../auth/auth.type';
+import { UserCreationParams, UserResponse, UserResponseWithRecords, UserUpdateParams } from './user.type';
 
 export class UserService {
-    static async getAllUsers(): Promise<UserResponseWithRecords> {
+    async getAllUsers(): Promise<UserResponseWithRecords> {
         const users = await prisma.user.findMany();
         return UserResponseWithRecords.LISTED(users);
     }
 
-    static async getUserById(userId: number): Promise<UserResponse> {
+    async getUserById(userId: number): Promise<UserResponse> {
         const user = await prisma.user.findUnique({ where: { id: userId } });
         if (!user) throw new NotFoundException();
         return UserResponse.FOUND(user);
     }
 
-    static async createUser(payload: UserCreationParams): Promise<UserResponse> {
+    async createUser(payload: UserCreationParams | SignUpParams): Promise<UserResponse> {
         try {
             const user = await prisma.user.create({ data: payload });
             return UserResponse.CREATED(user);
@@ -23,7 +24,7 @@ export class UserService {
         }
     }
 
-    static async updateUser(userId: number, payload: UserUpdateParams): Promise<UserResponse> {
+    async updateUser(userId: number, payload: UserUpdateParams): Promise<UserResponse> {
         try {
             const user = await prisma.user.update({ where: { id: userId }, data: payload });
             return UserResponse.UPDATED(user);
